Aligned trading system development interface to the trading one and modified data/product selectors to take the connection into account

--- a/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.html
@@ -70,7 +70,7 @@
 
     <tr>
       <td>{{mod("status")}}</td>
-      <td class="data-style">{{pd.status}}</td>
+      <td class="data-style"></td>
       <td></td>
       <td>{{mod("updatedAt")}}</td>
       <td class="data-style">{{pd.updatedAt}}</td>
