--- a/src/app/layout/main-panel/work-panel/tool/bias-analysis/backtest/bias-analysis.backtest.html
+++ b/src/app/layout/main-panel/work-panel/tool/bias-analysis/backtest/bias-analysis.backtest.html
@@ -31,8 +31,8 @@
       <table class="table-style">
         <tr><td>{{loc('symbol')}}</td>      <td><b>{{response.brokerProduct?.symbol}}</b></td></tr>
         <tr><td>{{loc('name')}}</td>        <td><b>{{response.brokerProduct?.name}}</b></td></tr>
-        <tr><td>{{loc('costPerOperation')}}</td><td><b>{{response.brokerProduct?.costPerOperation}}</b> {{response.brokerProduct?.currencyCode}}</td></tr>
-        <tr><td>{{loc('pointValue')}}</td>  <td><b>{{response.brokerProduct?.pointValue}}</b> {{response.brokerProduct?.currencyCode}}</td></tr>
+        <tr><td>{{loc('costPerOperation')}}</td><td><b>{{response.brokerProduct?.costPerOperation}}</b></td></tr>
+        <tr><td>{{loc('pointValue')}}</td>  <td><b>{{response.brokerProduct?.pointValue}}</b></td></tr>
       </table>
     </div>
 
@@ -46,8 +46,8 @@
         <tr><td>{{loc('months')}}</td>        <td><b>{{biasMonths()}}</b></td></tr>
         <tr><td>{{loc('excludes')}}</td>      <td><b>{{nodeData.biasConfig.excludes}}</b></td></tr>
         <tr><td>{{loc('operation')}}</td>     <td><b>{{operation()}}</b></td></tr>
-        <tr><td>{{loc('estGrossProfit')}}</td><td><b>{{nodeData.biasConfig.grossProfit}}</b>  {{response.brokerProduct?.currencyCode}}</td></tr>
-        <tr><td>{{loc('estNetProfit')}}</td>  <td><b>{{nodeData.biasConfig.netProfit}}</b>  {{response.brokerProduct?.currencyCode}}</td></tr>
+        <tr><td>{{loc('estGrossProfit')}}</td><td><b>{{nodeData.biasConfig.grossProfit}}</b></td></tr>
+        <tr><td>{{loc('estNetProfit')}}</td>  <td><b>{{nodeData.biasConfig.netProfit}}</b></td></tr>
       </table>
 
       <br/><mat-divider></mat-divider>
@@ -62,14 +62,14 @@
 
         <tr>
           <td>{{loc('profit')}}</td>
-          <td class="money-style"><b>{{nodeData.grossProfit}}</b> {{response.brokerProduct?.currencyCode}}</td>
-          <td class="money-style"><b>{{nodeData.netProfit}}</b> {{response.brokerProduct?.currencyCode}}</td>
+          <td class="money-style"><b>{{nodeData.grossProfit}}</b></td>
+          <td class="money-style"><b>{{nodeData.netProfit}}</b></td>
         </tr>
 
         <tr>
           <td>{{loc('avgTrade')}}</td>
-          <td class="money-style"><b>{{nodeData.grossAvgTrade}}</b> {{response.brokerProduct?.currencyCode}}</td>
-          <td class="money-style"><b>{{nodeData.netAvgTrade}}</b> {{response.brokerProduct?.currencyCode}}</td>
+          <td class="money-style"><b>{{nodeData.grossAvgTrade}}</b></td>
+          <td class="money-style"><b>{{nodeData.netAvgTrade}}</b></td>
         </tr>
       </table>
     </div>
