--- a/src/app/layout/main-panel/work-panel/tool/bias-analysis/playground/bias-analysis.playground.html
+++ b/src/app/layout/main-panel/work-panel/tool/bias-analysis/playground/bias-analysis.playground.html
@@ -99,13 +99,13 @@
                 <td class="label-style">{{loc('profit')}}</td>
                 <td class="value-style">{{selRangeProfit.gross}}</td>
                 <td class="value-style">{{selRangeProfit.net}}</td>
-                <td class="money-style">{{result.brokerProduct.currencyCode}}</td>
+                <td class="money-style"></td>
               </tr>
               <tr>
                 <td class="label-style">{{loc('avgTrade')}}</td>
                 <td class="value-style">{{selRangeProfit.avgGross}}</td>
                 <td class="value-style">{{selRangeProfit.avgNet}}</td>
-                <td class="money-style">{{result.brokerProduct.currencyCode}}</td>
+                <td class="money-style"></td>
               </tr>
             </table>
 
