--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/development/edit/edit.panel.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/development/edit/edit.panel.html
@@ -2,25 +2,19 @@
   <right-title-panel icon="inventory" title="{{title}}" (onClose)="onClose()"></right-title-panel>
 
   <div class="form-layout">
-    <input-text-required #tsNameCtrl        [(value)]="ts.name"           [label]="mod('name')" [len]="64"></input-text-required>
-    <br/>
-    <select-required #tsDataCtrl       [(key)]="ts.dataProductId"    [label]="mod('dataSymbol')"      keyField="id" valueField="name" [list]="data"></select-required>
-    <br/>
-    <select-required #tsBrokerCtrl     [(key)]="ts.brokerProductId"  [label]="mod('brokerSymbol')"    keyField="id" valueField="name" [list]="brokers"></select-required>
-    <br/>
-    <select-required #tsSessionCtrl    [(key)]="ts.tradingSessionId" [label]="mod('tradingSession')"  keyField="id" valueField="name" [list]="sessions"></select-required>
-    <br/>
-    <input-number-required #tsTimeframeCtrl [(value)]="ts.timeframe"      [label]="mod('timeframe')" [min]="1" [max]="1440"></input-number-required>
-    <br/>
-    <select-required #tsStratTypeCtrl  [(key)]="ts.strategyType"     [label]="mod('strategyType')"   [map]="strategyTypes"></select-required>
-    <br/>
-    <chip-set-text [title]="mod('tags')" [(items)]="tagSet"></chip-set-text>
-    <br/>
-    <mat-slide-toggle [(ngModel)]="ts.overnight">{{mod("overnight")}}</mat-slide-toggle>
-    <p></p>
-    <select-optional #tsProfileCtrl  [(key)]="ts.agentProfileId"      [label]="mod('agentProfile')" keyField="id" valueField="name" [list]="profiles"></select-optional>
-    <br/>
-    <input-text-required #tsExternRefCtrl [(value)]="ts.externalRef"  [label]="mod('externalRef')" [len]="64" *ngIf="ts.agentProfileId"></input-text-required>
+    <input-text-required #tsNameCtrl class="full-width"        [(value)]="ts.name"           [label]="mod('name')" [len]="64"></input-text-required>
+    <data-product-selector #tsDataCtrl class="half-width" [(productId)]="ts.dataProductId"></data-product-selector>
+    <broker-product-selector #tsBrokerCtrl class="half-width"  [(productId)]="ts.brokerProductId"></broker-product-selector>
+    <select-required #tsSessionCtrl class="full-width"  [(key)]="ts.tradingSessionId" [label]="mod('tradingSession')"  keyField="id" valueField="name" [list]="sessions"></select-required>
+    <input-number-required #tsTimeframeCtrl  class="half-width" [(value)]="ts.timeframe"      [label]="mod('timeframe')" [min]="1" [max]="1440"></input-number-required>
+    <select-required #tsStratTypeCtrl  class="half-width" [(key)]="ts.strategyType"     [label]="mod('strategyType')"   [map]="strategyTypes"></select-required>
+    <chip-set-text  class="full-width" [title]="mod('tags')" [(items)]="tagSet"></chip-set-text>
+    <mat-slide-toggle  class="full-width" [(ngModel)]="ts.overnight">{{mod("overnight")}}</mat-slide-toggle>
+    <date-picker #inSampleFromCtrl  class="half-width" [label]="mod('inSampleFrom')"  [(value)]="ts.inSampleFrom" [required]="true"></date-picker>
+    <date-picker #inSampleToCtrl    class="half-width" [label]="mod('inSampleTo')"    [(value)]="ts.inSampleTo"   [required]="true"></date-picker>
+    <select-required #tsEngineCodeCtrl class="full-width"  [(key)]="ts.engineCode" [label]="mod('engineCode')" [map]="engineCodes"></select-required>
+    <select-optional #tsProfileCtrl  class="half-width" [(key)]="ts.agentProfileId"      [label]="mod('agentProfile')" keyField="id" valueField="name" [list]="profiles"></select-optional>
+    <input-text-required #tsExternRefCtrl class="half-width" [(value)]="ts.externalRef"  [label]="mod('externalRef')" [len]="64" *ngIf="ts.agentProfileId"></input-text-required>
   </div>
 
   <div class="buttons-layout">
