--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/development/edit/edit.panel.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/development/edit/edit.panel.scss
@@ -13,9 +13,9 @@
   justify-content: flex-start;
   align-items: stretch;
   gap: 8px;
-  height   : 100%;
+  height : 100%;
   overflow: hidden;
-  width: 400px;
+  width : 600px;
 }
 
 //=============================================================================
@@ -34,8 +34,15 @@
 
 //=============================================================================
 
-input-text-required, select-required, input-number-required, chip-set-text, input-text-optional, select-optional {
+.full-width {
   width: 100%;
+}
+
+//=============================================================================
+
+.half-width {
+  width: 48%;
+  margin-right: 4px;
 }
 
 //=============================================================================
