Massive adds: Market analysis, TS simulations, TS quality

--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading/card/trading.card.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading/card/trading.card.html
@@ -53,5 +53,7 @@
 
 <mat-menu #dropMenu="matMenu">
   <button mat-menu-item (click)="onMenuToReady()"       >{{menu('toReady')}}</button>
-  <button mat-menu-item (click)="onMenuDocumentation()" >{{menu('documentation')}}</button>
+  <button mat-menu-item (click)="onMenuDocumentation()" >{{menu('documentation')}}...</button>
+  <button mat-menu-item (click)="onMenuQuality()"       >{{menu('quality')}}...</button>
+  <button mat-menu-item (click)="onMenuSimulation()"    >{{menu('simulation')}}...</button>
 </mat-menu>
