--- a/src/app/component/form/flat-button/flat-button.html
+++ b/src/app/component/form/flat-button/flat-button.html
@@ -1,3 +1,6 @@
-<button mat-flat-button class="flat-style">
-  <mat-icon *ngIf="icon" class="material-symbols-outlined">{{icon}}</mat-icon> {{label}}
+<button mat-flat-button class="flat-style" [disabled]="disabled">
+  @if (icon) {
+    <mat-icon class="material-symbols-outlined">{{icon}}</mat-icon>
+  }
+  {{label}}
 </button>
