--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/progress/progress.dialog.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/progress/progress.dialog.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>{{loc("titleProgress")}}</h2>
 <mat-dialog-content class="mat-typography">
   <div class="main-layout">
-    <mat-progress-spinner class="example-margin" [value]="percentage">
+    <mat-progress-spinner [value]="percentage">
     </mat-progress-spinner>
 
     <table class="summary-layout">
