--- a/src/app/layout/main-panel/work-panel/tool/market-analysis/daily/market-analysis.daily.html
+++ b/src/app/layout/main-panel/work-panel/tool/market-analysis/daily/market-analysis.daily.html
@@ -1,6 +1,6 @@
 <div class="main-panel">
   <flex-table #table class="table-panel"
               [columns] = "columns"
-              [data]    = "results"
+              [data]    = "dailyResults"
   ></flex-table>
 </div>
