--- a/src/app/module/simulator/params/params.panel.scss
+++ b/src/app/module/simulator/params/params.panel.scss
@@ -6,29 +6,36 @@
 //=== found in the LICENSE file
 //=============================================================================
 
-.main-panel {
+@import "../../../../styles/variables";
+
+//=============================================================================
+
+.params-layout {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  gap: 0;
+  justify-content: center;
+  align-items: center;
   height: 100%;
-  overflow: hidden;
+  background-color: $backgroundColor;
 }
 
 //=============================================================================
 
-.inner-panel {
-  flex: 1 1 auto;
-  overflow: auto;
+.panel-layout {
+  width: 400px;
 }
 
 //=============================================================================
 
-data-product-selector {
-  width: 300px;
-  margin-right: 8px;
+select-required {
+  width: 100%;
+}
+
+//=============================================================================
+
+input-number-required {
+  width: 100%;
 }
 
 //=============================================================================
