--- a/src/app/component/custom-params/custom-params.scss
+++ b/src/app/component/custom-params/custom-params.scss
@@ -1,39 +1,23 @@
 //=============================================================================
 //===
-//=== Copyright (C) 2024 Andrea Carboni
+//=== Copyright (C) 2026 Andrea Carboni
 //===
 //=== Use of this source code is governed by an MIT-style license that can be
 //=== found in the LICENSE file
 //=============================================================================
 
-.main-layout {
+.form-layout {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: stretch;
-  gap: 8px;
-  height: 100%;
-  overflow: hidden;
+  gap: 0;
 }
 
 //=============================================================================
 
-.form-layout {
-  flex: 1 1 auto;
-  overflow: auto;
-  padding: 0 8px 0 8px;
-}
-
-//=============================================================================
-
-.buttons-layout {
-  text-align: center;
-}
-
-//=============================================================================
-
-input-text-required, select-required {
+select-required, input-text-required {
   width: 100%;
 }
 
