--- a/src/app/layout/main-panel/work-panel/admin/connection/create/create.panel.html
+++ b/src/app/layout/main-panel/work-panel/admin/connection/create/create.panel.html
@@ -7,12 +7,7 @@
     <select-required #connSystemCodeCtrl [(key)]="conn.systemCode" [label]="loc('system')"
                           (keyChange)="onAdapterChange($event)"
                           keyField="code" valueField="name" [list]="adapters"></select-required>
-
-    <ng-container *ngFor="let param of configParams">
-      <input-text-required *ngIf="param.type=='string'"   [(value)]="param.valueStr" label="{{label(param.name)}}" [len]="param.maxValue"></input-text-required>
-      <input-text-required *ngIf="param.type=='password'" [(value)]="param.valueStr" label="{{label(param.name)}}" [len]="param.maxValue" type="password"></input-text-required>
-      <mat-checkbox *ngIf="param.type=='bool'" [checked]="param.valueBool" (change)="onCheckChange($event, param)">{{label(param.name)}}</mat-checkbox>
-    </ng-container>
+    <custom-params #paramsCtrl [params]="params" [(values)]="values" [systemCode]="conn.systemCode" class="params-layout"></custom-params>
   </div>
 
   <div class="buttons-layout">
